# quoalise

./: .gitignore  .pre-commit-config.yaml  README.md  dev-requirements.txt  mypy.ini  setup.cfg
data-format/: decisions.md  enedis.md
examples/: records_to_csv.py  subscriptions_to_json.py
fast/: ortho.dot  samerank.dot  test1.dot
formalisme/: enedis.md
protocol/: decisions.md
src/quoalise/: __init__.py  __main__.py  client.py  data.py  errors.py  test_data.py  utils.py
