[metadata]
name = quoalise
author = Cyril Lugan
author_email = cyril@lugan.fr
description = Quoalise is a protocol used to exchange sensor data in a federated topology, it is based on XMPP
version = 0.0.3
url = https://github.com/consometers/quoalise
keywords =
  xmpp
  home-automation
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering
  License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)
license_files =
  LICENSE.txt

[options]
python_requires = >= 3.8
package_dir =
    =src
packages=quoalise
setup_requires =
  wheel
install_requires =
  slixmpp==1.4.2
  pytz==2021.1

[options.packages.find]
where=src

[options.package_data]
quoalise = py.typed

[options.entry_points]
console_scripts =
  quoalise = quoalise.__main__:cli

[flake8]
max-line-length = 88
extend-ignore = E203
per-file-ignores = __init__.py:F401
